syntax="proto3";

package genproto;
option go_package="genproto/user_service";

message Company {
    string id = 1;
    string name = 2;
    string inn = 3;
    string owner_name = 4;
    string email = 5;
    string phone = 6;
}

message CreatedResponse {
    string id = 1;
}

message GetRequest {
    string id = 1;
}

message DeleteRequest {
    string id = 1;
}

message GetAllCompanyResponse {
    repeated Company companies = 1;
    int32 count = 2;
}